<resources>
    <string name="app_name">Marvel Quiz</string>
    <string name="question_1">
        Which character lives in Wakanda?
    </string>
    <string name="question_2">
        Who is in love with Pepper Pots?
    </string>
    <string name="question_3">
        Who has the strongest powers?
    </string>
    <string name="question_4">
        Who fought with Wolverine in WWII?
    </string>
    <string name="a_button">A. Captain America</string>
    <string name="b_button">B. Ironman</string>
    <string name="c_button">C. Captain Marvel</string>
    <string name="d_button">D. Black Panther</string>
    <string name="next_button">Skip</string>
    <string name="previous_button">Previous</string>

    <string name="cheat_button">Cheat</string>
    <string name="warning_text">Are you really sure you want to do this buddy?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgement_toast">You filthy cheater! How dare you!</string>

    <string name="incorrect_toast">Wrong!</string>
    <string name="correct_toast">Yay! You got it!</string>
    <string name="intro_button">Begin Marvel Quiz</string>
    <string name="Avengers">Avengers Image</string>


</resources>